--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import './base.css';
 @import './text.scss';
 @import './breakpoints.scss';
+@import './components/videobg.scss';
 
 * {
   font-family: 'Montserrat', sans-serif;
