--- a/src/styles/breakpoints.scss
+++ b/src/styles/breakpoints.scss
@@ -4,3 +4,9 @@ $tablet: 768px;
 $desktop: 1024px;
 $desktop-medium: 1366px;
 $desktop-fullHD: 1920px;
+
+@mixin ipad-portrait {
+  @media only screen and (min-device-width: $tablet) and (max-device-width: $desktop-medium) and (-webkit-min-device-pixel-ratio: 1) and (orientation: portrait) {
+    @content;
+  }
+}
