--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,7 +1,8 @@
 $color__white: #fff;
 $color__clear: #eee;
-$color__dark: #222832;
+$color__dark: #181818;
 $color__primary: #b715ac;
+$color__black: #222832;
 
 $color__black__transparency--light: rgba(0, 0, 0, 0.2);
 $color__black__transparency--medium: rgba(0, 0, 0, 0.5);
