Updated spots section

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -6,3 +6,4 @@ $color__black: #222832;
 
 $color__black__transparency--light: rgba(0, 0, 0, 0.2);
 $color__black__transparency--medium: rgba(0, 0, 0, 0.5);
+$color__gray__transparency--light: rgba(82, 82, 82, 0.85);
